--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Introduction
 
 Social Media for Aid Awareness is a project that investigates the potential of Social Media like Facebook and Twitter in promoting aid awareness. This github project was created as a demonstration for the concept.
 
-You can learn about the project more at http://smat-demo.appspot.com
+You can learn more about the project at http://smat-demo.appspot.com
